Added: authckeck [lab-08]
