# backend/src/docs/swagger.yaml
@@ -610,6 +610,35 @@ paths:
       summary: Update a Account
       tags:
       - Account
+  /accounts/authcheck:
+    get:
+      consumes:
+      - application/json
+      description: get Account
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.Account'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      summary: AuthCheck Account
+      tags:
+      - Account
   /accounts/login:
     post:
       consumes:
